--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<script src="js/jquery-1.11.1.min.js"></script>
 	<script src="js/jquery.mobile-1.4.5.min.js"></script>
       <script type="text/javascript" charset="utf-8" src="cordova.js"></script>
+    <script src="js/action.js"></script>
 </head>
 <body>
 
